--- a/recentPosts.html
+++ b/recentPosts.html
@@ -33,7 +33,7 @@
 
             <!--  -->
 
-            <article class="article-recent">
+            <article class="article-recent first-item">
 
                 <div class="article-recent-main">
                     <h2 class="article-title">Finding simplicity in life</h2>
