--- a/recentPosts.html
+++ b/recentPosts.html
@@ -102,7 +102,7 @@
                 
             <div class="sidebar-widget">
                 <h2 class="widget-title">ABOUT ME</h2>
-                <img src="img/about-me.jpg" alt="john doe" class="widget-image">
+                <img src="img/about-me.jpg" alt="Noor Aldeen" class="widget-image">
                 <p class="widget-body">I find life better, and I'm happier, when things are nice and simple.</p>
             </div>
             
